fix(style): dark mode and inline code style fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,8 @@
 
 @plugin "@tailwindcss/typography";
 
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
 :root,
 html[data-theme="light"] {
   --background: #f5f5f5;
@@ -44,10 +46,6 @@ html[data-theme="dark"] {
     @apply font-title font-semibold -tracking-tight;
   }
 
-  html[data-theme="dark"] .logo img {
-    filter: invert(1);
-  }
-
   #sun-svg,
   html[data-theme="dark"] #moon-svg {
     display: none;
@@ -80,7 +78,7 @@ html[data-theme="dark"] {
   }
 
   .prose {
-    @apply text-prose! prose-headings:mb-3! prose-headings:text-foreground! prose-h3:italic prose-p:text-foreground! prose-a:text-foreground! prose-a:decoration-dashed! prose-a:underline-offset-8 hover:prose-a:text-accent prose-blockquote:border-accent/50! prose-blockquote:opacity-80 prose-figcaption:text-foreground! prose-figcaption:opacity-70 prose-strong:text-foreground! prose-code:rounded-sm prose-code:bg-card/75 prose-code:p-1 prose-code:before:content-none! prose-code:after:content-none! prose-ol:text-foreground! prose-ul:overflow-x-clip prose-ul:text-foreground! prose-li:marker:text-accent! prose-table:text-foreground prose-th:border prose-th:border-border prose-td:border prose-td:border-border prose-img:my-2! prose-img:mx-auto;
+    @apply text-prose! prose-headings:mb-3! prose-headings:text-foreground! prose-h3:italic prose-p:text-foreground! prose-a:text-foreground! prose-a:decoration-dashed! prose-a:underline-offset-8 hover:prose-a:text-accent prose-blockquote:border-accent/50! prose-blockquote:opacity-80 prose-figcaption:text-foreground! prose-figcaption:opacity-70 prose-strong:text-foreground! prose-code:rounded-sm prose-code:bg-card/75 prose-code:text-foreground! prose-code:p-1 prose-code:before:content-none! prose-code:after:content-none! prose-ol:text-foreground! prose-ul:overflow-x-clip prose-ul:text-foreground! prose-li:marker:text-accent! prose-table:text-foreground prose-th:border prose-th:border-border prose-td:border prose-td:border-border prose-img:my-2! prose-img:mx-auto;
   }
 
   .prose a {
